# src/core/advertisement/DTO/IListAdvertisementDTO.ts
@@ -1,0 +1,5 @@
+export default interface IListAdvertisementDTO {
+  page: number
+  itemsPerPage: number
+  ownerId: string
+}
